--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "pg": "^8.11.0",
+    "@nestjs/config": "^3.0.0",
+    "js-yaml": "^4.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
